--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TELEGRAM_BOT_TOKEN="8154074350:AAGn3ZRX6d6eiZf4Qd5iZStJkgjTnjoE9pE"
 DATABASE_URL="tu_cadena_de_conexion_de_neon_aqui"
 ADMIN_IDS="[2047892910]"
+VERCEL_URL="bot-telegram-bay.vercel.app"
